# online_paint

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: client_main.cpp  main.cpp  server_main.cpp  settings.cpp  settings.hpp
src/client/: main.cpp
src/network/: client.cpp  client.hpp  serialization.cpp  serialization.hpp  server.cpp  server.hpp
src/paint/: color.cpp  color.hpp  cursor.cpp  cursor.hpp  dot.cpp  dot.hpp  dot_manager.cpp  dot_manager.hpp  io.cpp  io.hpp  render.cpp  render.hpp
src/paint/objects/: cursor.cpp  cursor.hpp  cursor_manager.cpp  cursor_manager.hpp  dot.hpp  dot_manager.cpp  dot_manager.hpp
src/utils/: fps_counter.cpp  fps_counter.hpp  io.cpp  log.cpp  log.hpp
tests/: cursor_manager_test.cpp  cursor_test.cpp  dot_manager_test.cpp  main_test.cpp
